# yral-metadata

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.local  build-server.sh  config.docker.toml  docker-run.sh  fly.toml  rust-toolchain.toml
.github/workflows/: build.yml  deploy.yml  publish-image.yml
client/: Cargo.toml
client/src/: lib.rs
jwt-generator/: Cargo.toml
jwt-generator/src/: args.rs  main.rs
server/: Cargo.toml
server/src/: api.rs  auth.rs  config.rs  consts.rs  error.rs  main.rs  state.rs  svc.rs
server/src/legacy/: error.rs  mod.rs  old_types.rs
types/: Cargo.toml  build.rs
types/proto/: yral_metadata.proto
types/src/: error.rs  lib.rs
