[package]
name = "yral-metadata-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ntex = { version = "1.2.1", features = ["tokio"] }
ntex-cors = "1.0.0"
serde.workspace = true
types = { path = "../types", package = "yral-metadata-types" }
gob-cloudflare = { git = "https://github.com/go-bazzinga/gob-cloudflare.git", rev = "c847ba87ecc73a33520b24bd62503420d7e23e3e", default-features = false, features = ["rustls-tls"] }
config = { version = "0.14.0", features = ["toml"] }
thiserror.workspace = true
candid.workspace = true
log.workspace = true
env_logger = "0.11.3"
yral-identity = { workspace = true, default-features = false, features = ["ic-git"] }
