[package]
name = "yral-metadata-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ntex = { version = "1.2.1", features = ["tokio"] }
ntex-cors = "1.0.0"
serde.workspace = true
types = { path = "../types", package = "yral-metadata-types" }
redis = { version = "0.25.2", features = ["tokio-rustls-comp", "aio", "ahash", "connection-manager", "keep-alive"] }
config = { version = "0.14.0", features = ["toml"] }
serde_json = "1.0.115"
serde_with = "3.7.0"
thiserror.workspace = true
candid.workspace = true
log.workspace = true
env_logger = "0.11.3"
bb8 = "0.8.2"
bb8-redis = "0.15.0"
yral-identity = { workspace = true, default-features = false, features = ["ic-git"] }
