[package]
name = "yral-metadata-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
candid.workspace = true 
thiserror.workspace = true
yral-identity = { workspace = true, default-features = false }
tonic = "0.11"
prost = "0.12"
serde_json.workspace = true

[features]
client = []
server = []
default = ["client", "server"]

[build-dependencies]
tonic-build = "0.11"